test/tests/compiler/18_structures/invalid_types/extra_credit/incomplete_unions/define_incomplete_union.plx
type union u; #  declare incomplete union type

pub my_union: union u; #  INVALID: defining variable with incomplete union type
